tests/wsf/fail/hash_in_export.wsf
"path#with_hash" export
end
